tests/cases/compiler-development/artifact/errors/diagnostic-self-import-source-id.diagnostic
diagnostic error code=M0001 family=module message="cyclic module import 'self_import::self_import' through source 'tests/cases/modules/errors/self_import.ari'" sources=1 labels=1 notes=1 helps=1
  Source source_id=1 kind=file path="tests/cases/modules/errors/self_import.ari" display="tests/cases/modules/errors/self_import.ari" bytes=56
  Label index=0 role=primary source_id=1 source="tests/cases/modules/errors/self_import.ari" line=1 column=5 end_line=1 end_column=16 byte_start=4 byte_end=15 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/self_import.ari:1:5\n   |\n 1 | mod self_import;\n   |     ^^^^^^^^^^^"
  Note index=0 location=none message="the imported source file is already on the active module loading stack"
  Help index=0 location=none message="move shared declarations to a third module or remove one of the imports in the cycle"
